# Tename

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  wrangler.jsonc
benchmarks/: run.py
benchmarks/graders/: manual.md
benchmarks/results/: _grade_runs.py  claude-opus-4-6-2026-04-19-coding-001.json  claude-opus-4-6-2026-04-19-data-001.json  claude-opus-4-6-2026-04-19-integration-001.json  claude-opus-4-6-2026-04-19-research-001.json  claude-opus-4-6-2026-04-19-tool-001.json
benchmarks/tasks/: coding-001.yaml  data-001.yaml  integration-001.yaml  research-001.yaml  tool-001.yaml
docs/: QUICKSTART.md  README.md
docs/architecture/: data-model.md  harness-runtime.md  model-router.md  overview.md  sandbox.md  session-service.md  tool-proxy.md
docs/dx/: cli-design.md  installation.md  sdk-design.md
docs/harness/: adapter-deep-agents.md  benchmark-suite.md  philosophy.md  profile-claude-opus-4-6.md  profile-format.md
docs/memory/: v0-validation-results.md
docs/operations/: deployment.md  observability.md
docs/reference/: deep-agents-overview.md
docs/vision/: principles.md  product-vision.md
examples/01-hello-world/: .env.example  README.md  main.py
examples/02-research-agent/: .env.example  README.md  main.py
examples/03-coding-agent/: .env.example  README.md  main.py
examples/deep_agents_research/: .env.example  README.md  main.py
scripts/: dev-setup.sh  dev-teardown.sh
site/: index.html
src/tename/: __init__.py
src/tename/cli/: __init__.py  __main__.py  main.py  migrate_commands.py  vault_commands.py
src/tename/db/: __init__.py  schema.py
src/tename/db/migrations/: env.py
src/tename/db/migrations/versions/: 0000_baseline.py  0001_initial_schema.py
src/tename/harness/: __init__.py  compaction.py  profiles.py  service.py
src/tename/harness/adapters/: __init__.py  base.py  deep_agents.py  vanilla.py
src/tename/profiles/: __init__.py  claude-opus-4-6.yaml
src/tename/proxy/: __init__.py  decorators.py  registry.py  service.py
src/tename/proxy/tools/: __init__.py  web_search.py
src/tename/router/: __init__.py  pricing.py  pricing.yaml  service.py  types.py
src/tename/router/providers/: __init__.py  anthropic.py  base.py
src/tename/sandbox/: __init__.py  base.py  schemas.py  service.py  state_machine.py  types.py
src/tename/sandbox/backends/: __init__.py  docker.py
src/tename/sandbox/tools/: __init__.py  _exec.py  bash.py  file_ops.py  python.py
src/tename/sdk/: __init__.py  _config.py  agents.py  client.py  errors.py  events.py  runtime.py  sessions.py
src/tename/sessions/: __init__.py  exceptions.py  models.py  schema.py  service.py  store.py
src/tename/vault/: __init__.py  crypto.py  exceptions.py  service.py
tests/: conftest.py  test_smoke.py
tests/cli/: test_migrate_cli.py  test_vault_cli.py
tests/harness/: conftest.py  test_adapters.py  test_anthropic_e2e.py  test_compaction.py  test_deep_agents_adapter.py  test_deep_agents_e2e.py  test_loop.py  test_loop_deep_agents.py  test_loop_proxy.py  test_loop_sandbox.py  test_profiles.py  test_sandbox_e2e.py  test_service.py
tests/proxy/: conftest.py  test_registry.py  test_service.py  test_web_search.py
tests/router/: conftest.py  test_anthropic_integration.py  test_anthropic_provider.py  test_pricing.py  test_service.py  test_types.py
tests/sandbox/: conftest.py  test_docker_backend.py  test_isolation.py  test_state_machine.py  test_types.py
tests/sdk/: test_client.py  test_config.py  test_runtime.py
tests/sessions/: conftest.py  test_events.py  test_models.py  test_service.py
tests/vault/: test_crypto.py  test_service.py
