[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tename"
version = "0.1.1"
description = "Open-source, model-agnostic production runtime for AI agents. Durable sessions, sandbox isolation, and per-model YAML profiles."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "deadLemonX", email = "mjrivera0613@gmail.com" },
]
keywords = [
    "ai",
    "agents",
    "llm",
    "runtime",
    "sandbox",
    "anthropic",
    "claude",
    "openai",
    "deep-agents",
    "infrastructure",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "anthropic>=0.40.0",
    "litellm>=1.50.0",
    "pyyaml>=6.0",
    "docker>=7.1.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
tename = "tename.cli.main:main"

[project.urls]
Homepage = "https://github.com/deadLemonX/Tename"
Repository = "https://github.com/deadLemonX/Tename"
Issues = "https://github.com/deadLemonX/Tename/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tename"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (ruff format handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[[tool.pyright.executionEnvironments]]
root = "tests"
# Test fixtures and @proxy_tool-decorated helpers register via
# side effects; pyright can't see the registration and flags the
# underscore-prefixed names as unused.
reportUnusedFunction = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "postgres: integration test that requires live Postgres via TENAME_TEST_DATABASE_URL",
    "anthropic: integration test that requires live Anthropic API via ANTHROPIC_API_KEY",
    "sandbox: integration test that requires a running Docker daemon",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
